指示書にユーザープロファイルコンポーネントの作成に関する詳細を追加し、タスク管理の方法を明確化。GitHub Copilotの設定や利用方法に関するセクションを拡充。

--- a/.github/prompts/20250401-002-test-rule-doc.prompt.md
+++ b/.github/prompts/20250401-002-test-rule-doc.prompt.md
@@ -9,3 +9,14 @@
 - テストのベストプラクティスを記述してください。
 - ユニットテスト、結合テスト、E2Eテストの具体例を含めてください。
 
+
+# 悩み
+Jestのテストを書かせると、
+自己解決が出来ないエラーで
+再試行のループにハマる
+
+テストのテンプレートか、完成させたテストを書くべきか？
+スクリーンショットを取って具体策を取るべきか？
+テスト自体をつくらないか？
+E2Eテスト Playwright MCPをつかうか？
+
