--- a/.github/.copilot-codeGeneration-instructions.md
+++ b/.github/.copilot-codeGeneration-instructions.md
@@ -35,3 +35,35 @@
 * データを危険にさらしたり、新たな脆弱性をもたらさないように、あらゆる段階で確認します。
 
 
+## 2. GitHub Copilot の役割と基本設定
+
+### 2.3. サーバーアクションの活用
+
+* Next.jsのサーバーアクションを積極的に使用してください。
+* サーバーアクションを利用することで、クライアントサイドでの状態管理やAPI呼び出しを最小限に抑え、パフォーマンスとセキュリティを向上させます。
+* サーバーアクションを利用する際は、以下の点に注意してください：
+  - 入力データのバリデーションにはZodを使用する。
+  - エラー処理を適切に実装し、ユーザーに分かりやすいエラーメッセージを提供する。
+  - サーバーアクションの戻り値として、成功時とエラー時の両方のケースをモデル化する。
+
+## 2. GitHub Copilot の役割と基本設定
+
+### 2.4. Hono の活用
+
+* APIの実装には、軽量で高速なWebフレームワークであるHonoを使用してください。
+* Honoを使用する際は、以下の点に注意してください：
+  - ルーティングはシンプルかつ直感的に記述する。
+  - ミドルウェアを活用して、認証やエラーハンドリングを効率的に実装する。
+  - 型安全性を確保するために、TypeScriptの型定義を適切に使用する。
+  - 必要に応じて、Honoのエコシステム（例: `hono/jwt` や `hono/cors`）を活用する。
+
+## 2. GitHub Copilot の役割と基本設定
+
+### 2.5. Supabase スキーマの定義
+
+* Supabaseのスキーマは、Drizzle ORMを使用して型安全に記述してください。
+* スキーマ定義の際は、以下の点に注意してください：
+  - 各テーブルの型を明確に定義する。
+  - 必要に応じて、リレーションや外部キーを適切に設定する。
+  - 型安全性を確保するために、TypeScriptの型定義を活用する。
+  - スキーマ変更時には、マイグレーションファイルを作成し、変更履歴を管理する。
