ユーザープロファイルおよび認証機能に関するプロンプトファイルを追加し、タスクリストの内容を更新。不要なプロンプトファイルを削除し、指示書の優先順位を明確化。

--- a/.github/.copilot-codeGeneration-instructions.md
+++ b/.github/.copilot-codeGeneration-instructions.md
@@ -1,12 +1,77 @@
 このファイルを参照したら、このファイル名を発言してください。
-このファイルのルールの優先度は低いです。
 
 # コード生成に関する指示
 
-このファイルでは、GitHub Copilotがコードを生成する際に従うべき具体的な指示を定義します。
+## 採用技術
+### 2.1. 期待する役割 (エキスパートとしての振る舞い)
+
+以下の技術スタックに精通したエキスパートとして振る舞ってください。
+
+* **言語:** TypeScript, Node.js
+* **フレームワーク/ライブラリ:** Next.js (App Router), React
+* **UI:** Shadcn/UI, Radix UI, Tailwind CSS
+* **状態管理:** Zustand
+* **バックエンド/DB:** Supabase
+* **ORM:** Drizzle ORM
+* **スキーマ検証:** Zod
+* **決済:** Stripe
+* **テスト:** Vitest, React Testing Library
+* **UI コンポーネント開発/管理:** Storybook
+* **API** Hono
+
+### 2.2. MCP (Model Context Protocol) の設定
+
+* MCP の設定は `.vscode/mcp.json` にあります。
+* 現在の MCP の設定は `Supabase` です。 (この設定が具体的に何を意味するかは `mcp.json` を参照してください)
 
 
-## コード生成
+
+# コロケーション
+
+コンポーネントに関するフォルダ、ファイルの配置方法
+コロケーションを採用します。
+
+Next.jsのApp Routerを使用し、コンポーネントのコロケーションを実現することで、プロジェクトの保守性と可読性を向上させる。具体的には、1つのページとそのページで使用する複数のコンポーネント、およびそれらのテストファイルを同一のフォルダにまとめる構成とします。
+
+## ページ固有のデータフェッチ
+
+場所: page.tsx または layout.tsx
+理由: ページ全体で必要なデータを取得する場合、page.tsx または layout.tsx にフェッチ処理を記述します。これにより、ページ全体のデータ依存性が明確になります。
+
+## コンポーネント固有のデータフェッチ
+
+場所: ComponentA.logic.tsx のようなロジック専用ファイル
+理由: 特定のコンポーネントでのみ必要なデータを取得する場合、ロジックを分離してComponentA.logic.tsxに記述します。これにより、コンポーネントの責務が明確になります。
+
+## 具体的な構成
+
+以下のディレクトリ構成を基本とします。
+
+```
+app/
+  [page-name]/
+    layout.tsx         // ページのレイアウトコンポーネント
+    page.tsx           // ページコンポーネント
+    common/        // 共通コンポーネントを格納するフォルダ
+      CommonComponent.tsx       // 共通コンポーネント
+      CommonComponent.logic.tsx  // 共通コンポーネントのロジックを分離したファイル
+      CommonComponent.test.tsx  // 共通コンポーネントのテストファイル
+    components/        // ページ固有のコンポーネントを格納するフォルダ
+      ComponentA.tsx
+      ComponentA.logic.tsx  // ComponentAのロジックを分離したファイル
+      ComponentA.test.tsx   // ComponentAのテストファイル
+      ComponentB.tsx
+      ComponentB.logic.tsx  // ComponentBのロジックを分離したファイル
+      ComponentB.test.tsx   // ComponentBのテストファイル
+    utils/             // (必要に応じてユーティリティ関数などを格納)
+      helperFunctions.ts
+    [page-name].test.tsx   // ページコンポーネントのテストファイル (任意)
+
+```
+
+
+
+# コード生成
 
 * コードを書く前に既存のコードを深くレビューし動作を確認します。
 
@@ -25,10 +90,14 @@
 * 条件文では不要な中括弧を避け、1行文では中括弧を省略します。
 * セミコロンは省略します（ただし、文の曖昧さを避けるために必要な場合は使用します）。
 
+
 ## コメント
 
 * コード例を示す際は、各行の目的を詳細なコメントで説明し、実行結果も示します。
 * 複雑なロジックには明確で簡潔なコメントを付けます。
+* JSDOC形式のコメントを使用して、関数やコンポーネントの説明を行います。
+* コメントは日本語で記述します。
+* コメントは、コードの意図や動作を明確にするために使用します。
 
 ## セキュリティ
 
