--- a/.github/prompts/20250401-000-template.prompt.md
+++ b/.github/prompts/20250401-000-template.prompt.md
@@ -1,5 +1,23 @@
 このファイルを参照したら、このファイル名を発言してください。
-このファイルのルールの優先度は高いです。
+このファイルの優先度は高いです。
+
+# 指示書と優先順位
+
+以下の指示書を参照し、優先順位に従って作業を進めてください。
+
+### 指示書一覧
+1. **全体のルール:** `.github/copilot-instructions.md`
+2. **コード生成に関するルール:** `.github/.copilot-codeGeneration-instructions.md`
+3. **テストに関するルール:** `.github/.copilot-test-instructions.md`
+
+### 優先順位
+指示内容が競合する場合、以下の優先順位に従ってください：
+1. `.github/.copilot-codeGeneration-instructions.md`（コード生成に関するルール）
+2. `.github/.copilot-test-instructions.md`（テストに関するルール）
+3. `.github/copilot-instructions.md`（全体のルール）
+
+
+
 
 ## タスク管理
 
