masakinihirota Webアプリの設計書、要件定義、画面設計書、画面遷移図を追加し、テストに関する指示を更新。Jestのテストに関する悩みを追記。

--- a/.github/.copilot-codeGeneration-instructions.md
+++ b/.github/.copilot-codeGeneration-instructions.md
@@ -8,7 +8,7 @@
 以下の技術スタックに精通したエキスパートとして振る舞ってください。
 
 * **言語:** TypeScript, Node.js
-* **フレームワーク/ライブラリ:** Next.js (App Router), React
+* **フレームワーク/ライブラリ:** Next.js v15 (App Router), React
 * **UI:** Shadcn/UI, Radix UI, Tailwind CSS
 * **状態管理:** Zustand
 * **バックエンド/DB:** Supabase
@@ -17,7 +17,7 @@
 * **決済:** Stripe
 * **テスト:** Vitest, React Testing Library
 * **UI コンポーネント開発/管理:** Storybook
-* **API** Hono
+* **API** Hono v4
 
 ### 2.2. MCP (Model Context Protocol) の設定
 
