--- a/.github/.copilot-test-instructions.md
+++ b/.github/.copilot-test-instructions.md
@@ -29,3 +29,15 @@
 
 * 重要なユーザーフローには統合テストを実装します。
 
+
+# 悩み
+Jestのテストを書かせると、
+自己解決が出来ないエラーで
+再試行のループにハマる
+
+テストのテンプレートか、完成させたテストを書くべきか？
+スクリーンショットを取って具体策を取るべきか？
+テスト自体をつくらないか？
+E2Eテスト Playwright MCPをつかうか？
+
+
