--- a/.github/.copilot-task-instructions.md
+++ b/.github/.copilot-task-instructions.md
@@ -1,22 +1,5 @@
 このファイルを参照したら、このファイル名を発言してください。
 
-# 指示書と優先順位
-
-以下の指示書を参照し、優先順位に従って作業を進めてください。
-
-### 指示書一覧
-1. **全体のルール:** `.github/copilot-instructions.md`
-2. **コード生成に関するルール:** `.github/.copilot-codeGeneration-instructions.md`
-3. **テストに関するルール:** `.github/.copilot-test-instructions.md`
-
-### 優先順位
-指示内容が競合する場合、以下の優先順位に従ってください：
-1. `.github/.copilot-codeGeneration-instructions.md`（コード生成に関するルール）
-2. `.github/.copilot-test-instructions.md`（テストに関するルール）
-3. `.github/copilot-instructions.md`（全体のルール）
-
-
-
 ## タスク管理
 
 ### タスク管理の方法
@@ -40,9 +23,10 @@
    - [!] 問題あり
 
 4. タスクの優先順位付け：
-   - 🔴 優先度 高
-   - 🟡 普通
-   - 🟢 優先度 低
+   - 🔴 緊急
+   - 🟡 優先度 高
+   - 🟢 普通
+   - ⚪ 優先度 低
 
 ### タスクの更新ルール
 
@@ -86,3 +70,8 @@
 
 1. 機能の実装後に、毎回 task-list.md を確認＆更新をしてください。
 2. 私が言わなくても随時更新するようにしてください。
+
+
+
+
+
